--- a/html/inicial/index.html
+++ b/html/inicial/index.html
@@ -10,13 +10,12 @@
 <body>
     <div class="Container">
         <div class="f1-Container">
-            <div class="Logo"><img src="../../assets/images/logo1 1.png" alt=""></div>
-            <div class="Fundo"> <BODY background="../../assets/images/fundo2 2.png"> </BODY> </div>
+            <div class="Fundo"> <BODY background="../../react/tcc/public/assets/images/fundo2 2.png"> </BODY> </div>
         </div>
     </div>
     <div class="Cabecalho">
         <div class="f1-cabecalho">
-            <div class="f1-inicio"> INÍCIO  LUGARES  HOSPEDAGENS FALE CONOSCO  MEUS PACOTES </div>
+            <div class="f1-inicio"> <img src="../../react/tcc/public/assets/images/logo1.svg" alt=""> INÍCIO  LUGARES  HOSPEDAGENS FALE CONOSCO  MEUS PACOTES </div>
             <div class="f1-conta"> MINHA <br> CONTA </div>
             <div class="f1-minha-conta"> <img src="../../assets/images/Conta 1.png" alt=""> </div>
         </div>
