--- a/html/inicial/index.html
+++ b/html/inicial/index.html
@@ -10,19 +10,20 @@
 <body>
     <div class="Container">
         <div class="f1-Container">
+            <div class="Logo"><img src="../../react/tcc/public/assets/images/logo1.svg" alt=""> </div>
             <div class="Fundo"> <BODY background="../../react/tcc/public/assets/images/fundo2 2.png"> </BODY> </div>
         </div>
     </div>
     <div class="Cabecalho">
         <div class="f1-cabecalho">
-            <div class="f1-inicio"> <img src="../../react/tcc/public/assets/images/logo1.svg" alt=""> INÍCIO  LUGARES  HOSPEDAGENS FALE CONOSCO  MEUS PACOTES </div>
+            <div class="f1-inicio"> INÍCIO  LUGARES  HOSPEDAGENS FALE CONOSCO  MEUS PACOTES </div>
             <div class="f1-conta"> MINHA <br> CONTA </div>
-            <div class="f1-minha-conta"> <img src="../../assets/images/Conta 1.png" alt=""> </div>
+            <div class="f1-minha-conta"> <img src="../../react/tcc/public/assets/images/Conta 1.png" alt=""> </div>
         </div>
     </div>
     <div class="Titulo">
         <div class="f1-logo-titulo">
-            <div class="TuriSpace"> <img src="../../assets/images/TuriSpace 1.png" alt=""> </div>
+            <div class="TuriSpace"> <img src="../../react/tcc/public/assets/images/TuriSpace 1.png" alt=""> </div>
             <div class="Pacote"> Compre já seu pacote, e deixe suas <br> férias garantidas </div>
             <div class="Faixa"><span>Promoções da Temporada</span></div>
         </div>
@@ -31,7 +32,7 @@
     <div class="Conteudo">
         <div class="f1-Conteudo">
             <div class="Faixa-2"> <span> 
-                <img src="../../assets/images/hopihari 1.png" alt=""> <br>  <img src="../../assets/images/barrinha 1.png" alt=""> <br>
+                <img src="../../react/tcc/public/assets/images/hopihari 1.png" alt=""> <br>  <img src="../../react/tcc/public/assets/images/barrinha 1.png" alt=""> <br>
                   HOPI HARI <br> • 2 Ingressos <br> VER MAIS DO PACOTES <br>R$ 160,00 <br> 
                    <button> COMPRAR </button>
             </span>
