--- a/html/inicial/index.html
+++ b/html/inicial/index.html
@@ -29,23 +29,42 @@
         </div>
     </div>
 
-    <div class="Conteudo">
-        <div class="f1-Conteudo">
-            <div class="Faixa-2"> <span> 
-                <img src="../../react/tcc/public/assets/images/hopihari 1.png" alt=""> <br>  <img src="../../react/tcc/public/assets/images/barrinha 1.png" alt=""> <br>
-                  HOPI HARI <br> • 2 Ingressos <br> VER MAIS DO PACOTES <br>R$ 160,00 <br> 
-                   <button> COMPRAR </button>
-            </span>
+<div class="Conteudo">
+   <div class="f1-Conteudo">
+      <div class="Faixa-2"> <span> 
+         <img src="../../react/tcc/public/assets/images/Hopi Hari  (1).png" alt="">
+    </span>
         </div>
-        <div class="Conteudo">
-            <div class="f1-Conteudo">
+           <div class="Conteudo">
+             <div class="f1-Conteudo">
                 <div class="Faixa-3"> <span> 
-                    <img src="../../assets/images/hopihari 1.png" alt=""> <br>  <img src="../../assets/images/barrinha 1.png" alt=""> <br> 
-                     HOPI HARI <br> • 2 Ingressos <br> VER MAIS DO PACOTES <br>R$ 160,00 <br> 
-                      <button> COMPRAR </button>
-                </span>
-            </div>
-        </div>
-    </div>
-</body>
+             <img src="../../react/tcc/public/assets/images/Rincão 2.png" alt=""> 
+         </span>
+     </div>
+            <div class="Conteudo">
+                <div class="f1-Conteudo">
+                    <div class="Faixa-4"> <span> 
+                        <img src="../../react/tcc/public/assets/images/Hopi Hari  (1).png" alt=""> 
+                    </span>
+                </div>
+
+         <div class="Conteudo">
+             <div class="f1-Conteudo">
+                <div class="Faixa-5"> <span> 
+                   <img src="../../react/tcc/public/assets/images/Rincão 2.png" alt="">
+             </span>
+         </div>
+     <div class="Conteudo">
+         <div class="f1-Conteudo">
+            <div class="Faixa-2"> <span> 
+         <img src="../../react/tcc/public/assets/images/Hopi Hari  (1).png" alt="">
+ </span>
+     </div>
+      <div class="Conteudo">
+          <div class="f1-Conteudo">
+             <div class="Faixa-6"> <span> 
+         <img src="../../react/tcc/public/assets/images/Rincão 2.png" alt=""> 
+     </span>
+  </div>
+  </body>
 </html>
