--- a/html/cadastro/index.html
+++ b/html/cadastro/index.html
@@ -5,9 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css" />
-    <title>Document</title>
+    <title>Cadastro</title>
 </head>
 <body>
-    
+  <div class="Container">
+      <div class="f1-container">
+          <div class="fundo"><BODY background="../../react/tcc/public/assets/images/buildings-1842205_1920 1.png"></BODY></div>
+          <div class="titulo"><img src="../../react/tcc/public/assets/images/Nome-Turispace.png" alt=""></div>
+          <div class="conteudo">
+            <div class="conteudo-esquerda">
+                <br class="CE-faixa1">Conheça os melhores lugares de SP
+                <br class="CE-faixa2">Oferecemos viagens com conforto, segurança e guia de turismo acompanhado por um preço acessível
+                <div class="CE-faixa3">
+                    <div class="CE-aviao"><h1>---</h1><img class="CE-imagem" src="../../react/tcc/public/assets/images/aviao.png" alt=""></div>
+                    <div class="CE-onibus"><h1>-------</h1><img src="../../react/tcc/public/assets/images/onibus.png" alt=""></div>
+                    <div class="CE-carro"><h1>--------------<h1><img src="../../react/tcc/public/assets/images/carrinho.png" alt=""></div>
+                    <div class="CE-pessoa"><h1>---------------------</h1><img src="../../react/tcc/public/assets/images/pessoa.png" alt=""></div>
+                </div>
+              </div>
+              <div class="conteudo-direita"></div>
+          </div>
+      </div>
+      </div>
 </body>
 </html>
