--- a/html/cadastro/index.html
+++ b/html/cadastro/index.html
@@ -1,3 +1,7 @@
+<style>
+    @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+</style>
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,12 +14,11 @@
 <body>
   <div class="Container">
       <div class="f1-container">
-          <div class="fundo"><BODY background="../../react/tcc/public/assets/images/buildings-1842205_1920 1.png"></BODY></div>
           <div class="titulo"><img src="../../react/tcc/public/assets/images/Nome-Turispace.png" alt=""></div>
           <div class="conteudo">
             <div class="conteudo-esquerda">
-                <br class="CE-faixa1">Conheça os melhores lugares de SP
-                <br class="CE-faixa2">Oferecemos viagens com conforto, segurança e guia de turismo acompanhado por um preço acessível
+                <div class="CE-faixa1">Conheça os melhores lugares de SP</div>
+                <div class="CE-faixa2">Oferecemos viagens com conforto, segurança e guia de turismo acompanhado por um preço acessível</div>
                 <div class="CE-faixa3">
                     <div class="CE-aviao"><h1>---</h1><img class="CE-imagem" src="../../react/tcc/public/assets/images/aviao.png" alt=""></div>
                     <div class="CE-onibus"><h1>-------</h1><img src="../../react/tcc/public/assets/images/onibus.png" alt=""></div>
