--- a/html/cadastro/index.html
+++ b/html/cadastro/index.html
@@ -20,7 +20,7 @@
                 <div class="CE-faixa1">Conheça os melhores lugares de SP</div>
                 <div class="CE-faixa2">Oferecemos viagens com conforto, segurança e guia de turismo acompanhado por um preço acessível</div>
                 <div class="CE-faixa3">
-                    <div class="CE-aviao"><h1>---</h1><img class="CE-imagem" src="../../react/tcc/public/assets/images/aviao.png" alt=""></div>
+                    <div class="CE-aviao"><h1>---</h1><img src="../../react/tcc/public/assets/images/aviao.png" alt=""></div>
                     <div class="CE-onibus"><h1>-------</h1><img src="../../react/tcc/public/assets/images/onibus.png" alt=""></div>
                     <div class="CE-carro"><h1>--------------<h1><img src="../../react/tcc/public/assets/images/carrinho.png" alt=""></div>
                     <div class="CE-pessoa"><h1>---------------------</h1><img src="../../react/tcc/public/assets/images/pessoa.png" alt=""></div>
