--- a/html/inicial/index.html
+++ b/html/inicial/index.html
@@ -5,66 +5,80 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css" />
-    <title>TCC-INICIAL</title>
+    <title>Inicial</title>
 </head>
 <body>
-    <div class="Container">
-        <div class="f1-Container">
-            <div class="Logo"><img src="../../react/tcc/public/assets/images/logo1.svg" alt=""> </div>
-            <div class="Fundo"> <BODY background="../../react/tcc/public/assets/images/fundo2 2.png"> </BODY> </div>
-        </div>
-    </div>
-    <div class="Cabecalho">
-        <div class="f1-cabecalho">
-            <div class="f1-inicio"> INÍCIO  LUGARES  HOSPEDAGENS FALE CONOSCO  MEUS PACOTES </div>
-            <div class="f1-conta"> MINHA <br> CONTA </div>
-            <div class="f1-minha-conta"> <img src="../../react/tcc/public/assets/images/Conta 1.png" alt=""> </div>
-        </div>
-    </div>
-    <div class="Titulo">
-        <div class="f1-logo-titulo">
-            <div class="TuriSpace"> <img src="../../react/tcc/public/assets/images/TuriSpace 1.png" alt=""> </div>
-            <div class="Pacote"> Compre já seu pacote, e deixe suas <br> férias garantidas </div>
-            <div class="Faixa"><span>Promoções da Temporada</span></div>
-        </div>
-    </div>
+         <div class="Container">
+            <div class="Cabecalho">
+                <div class="f1-Cabecalho">
+                    <div class="Logo"> <img src="../../react/tcc/public/assets/images/logo1.svg" alt=""> </div>
+                    <div class="Menu"> INÍCIO &nbsp &nbsp &nbsp &nbsp &nbsp  &nbsp &nbsp LUGARES  &nbsp &nbsp &nbsp &nbsp &nbsp  &nbsp &nbsp CATEGORIAS &nbsp &nbsp &nbsp &nbsp &nbsp  &nbsp &nbsp FALE CONOSCO &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp MEUS PACOTES &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp MINHA <br-2> CONTA </div>
+                    <div class="Conta"> <img src="../../react/tcc/public/assets/images/Conta 1.png" alt=""> </div>
+                </div>
+            </div>
 
-<div class="Conteudo">
-   <div class="f1-Conteudo">
-      <div class="Faixa-2"> <span> 
-         <img src="../../react/tcc/public/assets/images/Hopi Hari  (1).png" alt="">
-    </span>
-        </div>
-           <div class="Conteudo">
-             <div class="f1-Conteudo">
-                <div class="Faixa-3"> <span> 
-             <img src="../../react/tcc/public/assets/images/Rincão 2.png" alt=""> 
-         </span>
-     </div>
+            <div class="Titulo">
+                <div class="f1-logo-titulo">
+                    <div class="TuriSpace"> <img src="../../react/tcc/public/assets/images/TuriSpace 1.png" alt=""> </div>
+                    <div class="Pacote"> Compre já seu pacote, e deixe suas <br> férias garantidas </div>
+                    <div class="Faixa"> <span> Promoções da Temporada </span> </div>
+                </div>
+            </div>
+
             <div class="Conteudo">
                 <div class="f1-Conteudo">
-                    <div class="Faixa-4"> <span> 
-                        <img src="../../react/tcc/public/assets/images/Hopi Hari  (1).png" alt=""> 
-                    </span>
+                    <div class="Hopi"> <img src="../../react/tcc/public/assets/images/Hopi Hari  (1).png" alt=""> </div>
+                    <div class="Barrinha"> <img src="../../react/tcc/public/assets/images/Barrinha 1.png" alt=""> </div>
+                    <div class="Nome"> HOPI HARI <br> • 2 Ingressos </div>
+                    <div class="Valor"> VER MAIS DO PACOTE <br> R$ 160,00 </div>
+                </div>
+            </div>
+
+            <div class="Conteudo">
+                <div class="f1-Conteudo">
+                    <div class="Hopi"> <img src="../../react/tcc/public/assets/images/Hopi Hari  (1).png" alt=""> </div>
+                    <div class="Barrinha"> <img src="../../react/tcc/public/assets/images/Barrinha 1.png" alt=""> </div>
+                    <div class="Nome"> HOPI HARI <br> • 2 Ingressos </div>
+                    <div class="Valor"> VER MAIS DO PACOTE <br> R$ 160,00 </div>
+                </div>
+            </div>
+
+            <div class="Conteudo">
+                <div class="f1-Conteudo">
+                    <div class="Hopi"> <img src="../../react/tcc/public/assets/images/Hopi Hari  (1).png" alt=""> </div>
+                    <div class="Barrinha"> <img src="../../react/tcc/public/assets/images/Barrinha 1.png" alt=""> </div>
+                    <div class="Nome"> HOPI HARI <br> • 2 Ingressos </div>
+                    <div class="Valor"> VER MAIS DO PACOTE <br> R$ 160,00 </div>
+                </div>
+            </div>
+
+                    <div class="Conteudo-2">
+                        <div class="f2-Conteudo">
+                            <div class="Ricao"> <img src="../../react/tcc/public/assets/images/Hopi Hari  (1).png" alt=""> </div>
+                            <div class="Barrinha-2"> <img src="../../react/tcc/public/assets/images/Barrinha 1.png" alt=""> </div>
+                            <div class="Nome-2"> RINCÃO <br> • 2 Ingressos </div>
+                            <div class="Valor-2"> VER MAIS DO PACOTE <br> R$ 110,00 </div>
+                        </div>
+                </div>
+                
+                <div class="Conteudo-2">
+                    <div class="f2-Conteudo-3">
+                        <div class="Ricao"> <img src="../../react/tcc/public/assets/images/Hopi Hari  (1).png" alt=""> </div>
+                        <div class="Barrinha-2"> <img src="../../react/tcc/public/assets/images/Barrinha 1.png" alt=""> </div>
+                        <div class="Nome-2"> RINCÃO <br> • 2 Ingressos </div>
+                        <div class="Valor-2"> VER MAIS DO PACOTE <br> R$ 110,00 </div>
+                    </div>
+              </div>
+
+                <div class="Conteudo-2">
+                    <div class="f2-Conteudo-3">
+                        <div class="Ricao"> <img src="../../react/tcc/public/assets/images/Hopi Hari  (1).png" alt=""> </div>
+                        <div class="Barrinha-2"> <img src="../../react/tcc/public/assets/images/Barrinha 1.png" alt=""> </div>
+                        <div class="Nome-2"> RINCÃO <br> • 2 Ingressos </div>
+                        <div class="Valor-2"> VER MAIS DO PACOTE <br> R$ 110,00 </div>
+                    </div>
                 </div>
 
-         <div class="Conteudo">
-             <div class="f1-Conteudo">
-                <div class="Faixa-5"> <span> 
-                   <img src="../../react/tcc/public/assets/images/Rincão 2.png" alt="">
-             </span>
          </div>
-     <div class="Conteudo">
-         <div class="f1-Conteudo">
-            <div class="Faixa-2"> <span> 
-         <img src="../../react/tcc/public/assets/images/Hopi Hari  (1).png" alt="">
- </span>
-     </div>
-      <div class="Conteudo">
-          <div class="f1-Conteudo">
-             <div class="Faixa-6"> <span> 
-         <img src="../../react/tcc/public/assets/images/Rincão 2.png" alt=""> 
-     </span>
-  </div>
-  </body>
+   </body>
 </html>
