--- a/html/fale_conosco/index.html
+++ b/html/fale_conosco/index.html
@@ -5,9 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css" />
-    <title>Document</title>
+    <title> TCC- Fale Conosco </title>
 </head>
 <body>
-    
+    <div class="Container-fale-conosco">
+        <div class="cabecalho-fale_conosco">
+            <div class="Logo"><img src="../../react/tcc/public/assets/images/logo1.svg" alt=""> </div>
+            <div class="opcoes">
+                INÍCIO  LUGARES  HOSPEDAGENS FALE CONOSCO  MEUS PACOTES 
+            </div>
+            <div class="conta"> MINHA <br> CONTA </div>
+        </div>
+        <div class="conteudo-fale_conosco"></div>
+     
+    </div>
+
 </body>
 </html>
