--- a/html/inicial/index.html
+++ b/html/inicial/index.html
@@ -79,6 +79,14 @@
                     </div>
                 </div>
 
+                <div class="Ver">
+                    <div class="Botão"> <button> VER MAIS PACOTES </button> </div>
+                </div>
+         </div>
+         <div class="Container-2">
+             <div class="f4-Container">
+                 <div class="Faixa-4">  <span>  Turismo em São Paulo </span></div>
+             </div>
          </div>
    </body>
 </html>
