--- a/html/login/index.html
+++ b/html/login/index.html
@@ -1,12 +1,32 @@
+<style>
+    @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
+</style>
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>login</title>
+    <link rel="stylesheet" href="index.css" />
+    <title>Login</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="f1-container">
+            <div class="conteudo">
+                <div class="cabecalho-login">
+                    <img src="../../react/tcc/public/assets/images/icon-login.svg" alt="" class="icon-login">
+                    <div class="login">Login</div>
+                </div>
+                <input class="input-email" type="text" value="Digite seu e-mail">
+                <div class="linha-email"></div>
+                <input class="input-senha" type="text" value="Digite sua senha">
+                <div class="linha-senha"></div>
+                <button class="esqueceu-senha">Esqueceu sua senha?</button>
+                <button class="botao-logar">Entrar</button>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
