--- a/html/esqueceu _senha/index.html
+++ b/html/esqueceu _senha/index.html
@@ -1,3 +1,7 @@
+<style>
+  @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
+</style>
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,9 +9,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css" />
-    <title>Document</title>
+    <title>Esqueceu a senha</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="f1-container">
+            <div class="conteudo">
+                <div class="cabecalho">
+                    <img src="../../react/tcc/public/assets/images/icon-login.svg" alt="" class="logo-usuario">
+                    <div class="esqueceu-senha">Esqueceu sua senha</div>
+                </div>
+                <input class="input-email" type="text" value="Insira o e-mail cadastrado">
+                <div class="linha-email"></div>
+                <button class="botao-esqueceu-senha">Enviar</button>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
