--- a/html/codigo/index.html
+++ b/html/codigo/index.html
@@ -1,3 +1,7 @@
+<style>
+    @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
+</style>
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,9 +9,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css" />
-    <title>Document</title>
+    <title>Código de Verificação</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="f1-container">
+            <div class="digite-codigo">Digite o código enviado por e-mail</div>
+            <div class="codigo">
+                <div class="numero">
+                    <input class="n1" type="text" value="#">
+                    <div class="linha-codigo"></div>
+                </div>
+                <div class="numero">
+                    <input class="n1" type="text" value="#">
+                    <div class="linha-codigo"></div>
+                </div>
+                <div class="numero">
+                    <input class="n1" type="text" value="#">
+                    <div class="linha-codigo"></div>
+                </div>
+                <div class="numero">
+                    <input class="n1" type="text" value="#">
+                    <div class="linha-codigo"></div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
