Pronto-meu-amor

--- a/html/inicial/index.html
+++ b/html/inicial/index.html
@@ -87,6 +87,68 @@
              <div class="f4-Container">
                  <div class="Faixa-4">  <span>  Turismo em São Paulo </span></div>
              </div>
+             <div class="Guardar">
+                <div class="imagens">
+                    <div class="imagens-2">
+                        <div class="img1"> <img src="../../react/tcc/public/assets/images/museuu.png" alt=""> </div>
+                    </div>
+                </div>
+                <div class="imagens">
+                   <div class="imagens-2">
+                       <div class="img1"> <img src="../../react/tcc/public/assets/images/museuu.png" alt=""> </div>
+                   </div>
+               </div>
+               <div class="imagens">
+                   <div class="imagens-2">
+                       <div class="img1"> <img src="../../react/tcc/public/assets/images/museuu.png" alt=""> </div>
+                   </div>
+               </div>
+             </div>
+             <div class="Guardar">
+                <div class="imagens">
+                    <div class="imagens-2">
+                        <div class="img1"> <img src="../../react/tcc/public/assets/images/museuu.png" alt=""> </div>
+                    </div>
+                </div>
+                <div class="imagens">
+                   <div class="imagens-2">
+                       <div class="img1"> <img src="../../react/tcc/public/assets/images/museuu.png" alt=""> </div>
+                   </div>
+               </div>
+               <div class="imagens">
+                   <div class="imagens-2">
+                       <div class="img1"> <img src="../../react/tcc/public/assets/images/museuu.png" alt=""> </div>
+                   </div>
+               </div>
+             </div>
          </div>
+         <div class="rodape">
+            <div class="coluna1">
+                <div class="c1-cima">Siga nossas redes sociais </div>
+                <div class="c1-baixo">
+                    <img src="../../react/tcc/public/assets/images/instagram.png" alt="" class="insta-logo">
+                    <img src="../../react/tcc/public/assets/images/facebook.png" alt="" class="face-logo">
+                    <img src="../../react/tcc/public/assets/images/twitter.png" alt="" class="twitter-logo">
+                </div>
+            </div>
+            <div class="coluna2">
+                <div class="c2-cima">Entre em contato</div>
+                <div class="c2-baixo">(11) 95247-9539</div>
+                <div class="c2-baixo2">turiSPace@gmail.com</div>
+            </div>
+            <div class="coluna3">
+                <div class="c3-cima">Endereço</div>
+                <div class="c3-baixo">Av. Coronel Octaviano de Freitas Costa, 463 - SP</div>
+            </div>
+            <div class="coluna4">
+                <div class="c4-cima">Suporte</div>
+                <div class="c4-baixo">Politica de Privaciade</div>
+                <div class="c4-baixo2">Sobre nós</div>
+            </div>
+            <div class="coluna5">
+                <div class="c5-cima">Formas de pagamento</div>
+                <img src="../../react/tcc/public/assets/images/cartoes 1.png" alt="" class="c5-baixo">
+            </div>
+        </div>
    </body>
 </html>
