--- a/html/fale_conosco/index.html
+++ b/html/fale_conosco/index.html
@@ -37,7 +37,7 @@
                             <label for="nome">Nome:</label><br>
                             <input type="text" id="nome" name="nome" value=""><br>
                             <label for="mensagem">Sua mensagem:</label><br>
-                            <textarea id="mensagem" name="mensagem" > </textarea> <br>
+                            <textarea > </textarea> <br>
                             <button type="button-enviar"> Enviar </button>
                         </form>
                     </div>
