--- a/html/cadastro/index.html
+++ b/html/cadastro/index.html
@@ -30,8 +30,8 @@
               </div>
               <div class="conteudo-direita">
                   <div class="cadastrar">Cadastre-se</div>
-                  <input class="input-email" type="text" value="Insira seu e-mail">
-                  <input class="input-senha" type="text" value="Insira sua senha">
+                  <input class="input-email" type="text" placeholder="Insira seu e-mail">
+                  <input class="input-senha" type="text" placeholder="Insira sua senha">
                   <button class="botao-cadastrar">Cadastrar</button>
                   <button class="login">Já é cadastrado? Login</button>
               </div>
