tcc-ajeitei-umas-coisas

--- a/html/esqueceu _senha/index.html
+++ b/html/esqueceu _senha/index.html
@@ -19,7 +19,7 @@
                     <img src="../../react/tcc/public/assets/images/icon-login.svg" alt="" class="logo-usuario">
                     <div class="esqueceu-senha">Esqueceu sua senha</div>
                 </div>
-                <input class="input-email" type="text" value="Insira o e-mail cadastrado">
+                <input class="input-email" type="text" placeholder="Insira o e-mail cadastrado">
                 <div class="linha-email"></div>
                 <button class="botao-esqueceu-senha">Enviar</button>
             </div>
