--- a/html/login/index.html
+++ b/html/login/index.html
@@ -19,11 +19,11 @@
                     <img src="../../react/tcc/public/assets/images/icon-login.svg" alt="" class="icon-login">
                     <div class="login">Login</div>
                 </div>
-                <input class="input-email" type="text" value="Digite seu e-mail">
+                <input class="input-email" type="text" placeholder="Digite seu e-mail">
                 <div class="linha-email"></div>
-                <input class="input-senha" type="text" value="Digite sua senha">
+                <input class="input-senha" type="text" placeholder="Digite sua senha">
                 <div class="linha-senha"></div>
-                <button class="esqueceu-senha">Esqueceu sua senha?</button>
+                <button class="esqueceu-senha"> <a href="http://127.0.0.1:5500/html/esqueceu%20_senha/index.html">Esqueceu sua senha?</a></button>
                 <button class="botao-logar">Entrar</button>
             </div>
         </div>
