--- a/html/lugares/index.html
+++ b/html/lugares/index.html
@@ -24,10 +24,10 @@
                     <div class="Menu-f1"> <a href="http://127.0.0.1:5500/html/lugares/index.html">LUGARES</a> </div>
                     <div class="Menu-f1"> <a href="http://127.0.0.1:5500/html/fale_conosco/index.html">FALE CONOSCO </a> </div>
                     <div class="Menu-f1"> MEUS PACOTES </div>
-                    <div class="Menu-f1"> MINHA <br> CONTA </div>
-                    </div>
-                    <div class="conta"> <img src="../../react/tcc/public/assets/images/perfil.svg" alt=""> </div>
+                    <div class="nm-conta"> <div class="conta"> MINHA CONTA </div> <img src="../../react/tcc/public/assets/images/perfil.svg" alt=""> </div>
                 </div>
+                
+            </div>
             </div>
             <div class="Nomes">
                 <div class="barra-pesquisa"> <input type="text" placeholder="Quero ir para..."/> </div>
@@ -43,10 +43,10 @@
             </div>
             <div class="Museus">
                 <div class="nomes-opcoes">
-                    <div class="barraaa"> <img src="../../react/tcc/public/assets/images/barra98.png" alt=""> </div>
-                    <div class="barraaa"> <img src="../../react/tcc/public/assets/images/barra98.png" alt=""> </div>
-                    <div class="barraaa"> <img src="../../react/tcc/public/assets/images/barra98.png" alt=""> </div>
-                    <div class="barraaa"> <img src="../../react/tcc/public/assets/images/barra98.png" alt=""> </div>
+                    <div class="barraaa"> <img src="../../react/tcc/public/assets/images/barra980.png" alt=""> </div>
+                    <div class="barraaa"> <img src="../../react/tcc/public/assets/images/barra980.png" alt=""> </div>
+                    <div class="barraaa"> <img src="../../react/tcc/public/assets/images/barra980.png" alt=""> </div>
+                    <div class="barraaa"> <img src="../../react/tcc/public/assets/images/barra980.png" alt=""> </div>
                 </div>
             </div>
             <div class="Conteudo">
@@ -75,10 +75,10 @@
             </div>
             <div class="Museus">
                 <div class="nomes-opcoes">
-                    <div class="barraaa-2"> <img src="../../react/tcc/public/assets/images/Line 10.png" alt=""> </div>
-                    <div class="barraaa-2"> <img src="../../react/tcc/public/assets/images/Line 10.png" alt=""> </div>
-                    <div class="barraaa-2"> <img src="../../react/tcc/public/assets/images/Line 10.png" alt=""> </div>
-                    <div class="barraaa-2"> <img src="../../react/tcc/public/assets/images/Line 10.png" alt=""> </div>
+                    <div class="barraaa-2"> <img src="../../react/tcc/public/assets/images/Line 11.png" alt=""> </div>
+                    <div class="barraaa-2"> <img src="../../react/tcc/public/assets/images/Line 11.png" alt=""> </div>
+                    <div class="barraaa-2"> <img src="../../react/tcc/public/assets/images/Line 11.png" alt=""> </div>
+                    <div class="barraaa-2"> <img src="../../react/tcc/public/assets/images/Line 11.png" alt=""> </div>
                 </div>
                 <div class="rodape">
                     <div class="coluna1">
