--- a/html/cadastro/index.html
+++ b/html/cadastro/index.html
@@ -33,7 +33,7 @@
                   <input class="input-email" type="text" placeholder="Insira seu e-mail">
                   <input class="input-senha" type="text" placeholder="Insira sua senha">
                   <button class="botao-cadastrar">Cadastrar</button>
-                  <button class="login">Já é cadastrado? Login</button>
+                  <button class="login">  <a href="http://127.0.0.1:5500/html/login/index.html">Já é cadastrado? Login</a> </button>
               </div>
           </div>
 
