--- a/html/lugares/index.html
+++ b/html/lugares/index.html
@@ -20,10 +20,10 @@
             <div class="f1-Cabecalho">
                 <div class="Logo"> <img src="../../react/tcc/public/assets/images/logo1.svg" alt=""> </div>
                 <div class="Menu">
-                    <div class="Menu-f1"> <a href="http://127.0.0.1:5500/html/inicial/index.html">INICIO</a> </div>
-                    <div class="Menu-f1"> <a href="http://127.0.0.1:5500/html/lugares/index.html">LUGARES</a> </div>
-                    <div class="Menu-f1"> <a href="http://127.0.0.1:5500/html/fale_conosco/index.html">FALE CONOSCO </a> </div>
-                    <div class="Menu-f1"> MEUS PACOTES </div>
+                    <div class="Menu-f1"> <a href="../../html/inicial/index.html">INICIO</a> </div>
+                    <div class="Menu-f1"> <a href="../../html/lugares/index.html">LUGARES</a> </div>
+                    <div class="Menu-f1"> <a href="../../html/fale_conosco/index.html">FALE CONOSCO </a> </div>
+                    <div class="Menu-f1"> <a href="../../html/meus_pacotes/index.html"></a> MEUS PACOTES </a></div>
                     <div class="nm-conta"> <div class="conta"> MINHA CONTA </div> <img src="../../react/tcc/public/assets/images/perfil.svg" alt=""> </div>
                 </div>
                 
