--- a/html/lugares/index.html
+++ b/html/lugares/index.html
@@ -23,8 +23,8 @@
                     <div class="Menu-f1"> <a href="../../html/inicial/index.html">INICIO</a> </div>
                     <div class="Menu-f1"> <a href="../../html/lugares/index.html">LUGARES</a> </div>
                     <div class="Menu-f1"> <a href="../../html/fale_conosco/index.html">FALE CONOSCO </a> </div>
-                    <div class="Menu-f1"> <a href="../../html/meus_pacotes/index.html"></a> MEUS PACOTES </a></div>
-                    <div class="nm-conta"> <div class="conta"> MINHA CONTA </div> <img src="../../react/tcc/public/assets/images/perfil.svg" alt=""> </div>
+                    <div class="Menu-f1"> <a href="../../html/meus_pacotes/index.html"> MEUS PACOTES </a></div>
+                    <div class="nm-conta"> <div class="conta"> <a href="../../html/minha_conta/index.html"> MINHA CONTA <img src="../../react/tcc/public/assets/images/perfil.svg" alt=""> </a></div>
                 </div>
                 
             </div>
