--- a/html/codigo/index.html
+++ b/html/codigo/index.html
@@ -17,19 +17,19 @@
             <div class="digite-codigo">Digite o código enviado por e-mail</div>
             <div class="codigo">
                 <div class="numero">
-                    <input class="n1" type="text" value="#">
+                    <input class="n1" type="text" placeholder="#">
                     <div class="linha-codigo"></div>
                 </div>
                 <div class="numero">
-                    <input class="n1" type="text" value="#">
+                    <input class="n1" type="text" placeholder="#">
                     <div class="linha-codigo"></div>
                 </div>
                 <div class="numero">
-                    <input class="n1" type="text" value="#">
+                    <input class="n1" type="text" placeholder="#">
                     <div class="linha-codigo"></div>
                 </div>
                 <div class="numero">
-                    <input class="n1" type="text" value="#">
+                    <input class="n1" type="text" placeholder="#">
                     <div class="linha-codigo"></div>
                 </div>
             </div>
