--- a/html/redefinir_senha/index.html
+++ b/html/redefinir_senha/index.html
@@ -16,9 +16,9 @@
         <div class="f1-container">
             <div class="conteudo">
                 <div class="redefinir-senha">Redefinição de Senha</div>
-                <input class="senha" type="text" value="Nova Senha">
+                <input class="senha" type="text" placeholder="Nova Senha">
                 <div class="linha-senha"></div>
-                <input class="senha" type="text" value="Confirme sua senha">
+                <input class="senha" type="text" placeholder="Confirme sua senha">
                 <div class="linha-senha"></div>
                 <button class="botao-redefinir">Confirmar</button>
             </div>
