TA DANDO TD ERRADO

--- a/html/lugares/index.html
+++ b/html/lugares/index.html
@@ -15,7 +15,7 @@
 </style>
 
 <body>
-    <div class="Contaneir">
+    <div class="Container">
         <div class="Cabecalho">
             <div class="f1-Cabecalho">
                 <div class="Logo"> <img src="../../react/tcc/public/assets/images/logo1.svg" alt=""> </div>
@@ -24,10 +24,8 @@
                     <div class="Menu-f1"> <a href="../../html/lugares/index.html">LUGARES</a> </div>
                     <div class="Menu-f1"> <a href="../../html/fale_conosco/index.html">FALE CONOSCO </a> </div>
                     <div class="Menu-f1"> <a href="../../html/meus_pacotes/index.html"> MEUS PACOTES </a></div>
-                    <div class="nm-conta"> <div class="conta"> <a href="../../html/minha_conta/index.html"> MINHA CONTA <img src="../../react/tcc/public/assets/images/perfil.svg" alt=""> </a></div>
+                    <div class="nm-conta"> <div class="conta"> <a href="../../html/minha_conta/index.html"> MINHA CONTA <img src="../../react/tcc/public/assets/images/perfil.svg" alt=""> </a></div></div>
                 </div>
-                
-            </div>
             </div>
             <div class="Nomes">
                 <div class="barra-pesquisa"> <input type="text" placeholder="Quero ir para..."/> </div>
